--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="hero-left">
-            <h1>Backend Developer</h1>
+            <h1>Hi this is me Adeel a passionate Backend Developer</h1>
             <p>
                 I specialize in building scalable, secure, and high-performance backend systems 
                 using Python (Django, DRF, FastAPI, Flask) and databases like PostgreSQL, 
