--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adeel — Backend Developer</title>
+    <title>Anwar — Backend Developer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -11,7 +11,13 @@
 
     <!-- NAVIGATION -->
     <nav class="navbar">
-        <div class="nav-logo">Adeel's Portfolio.</div>
+        <div class="nav-logo">Anwar's Portfolio</div>
+
+        <!-- Hamburger for mobile -->
+        <div class="hamburger" onclick="toggleMenu()">
+            <i class="fas fa-bars"></i>
+        </div>
+
         <ul class="nav-menu">
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -23,7 +29,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="hero-left">
-        <h1>Hello, I’m Adeel – Backend Developer</h1>
+            <h1>Hello, I’m Anwar – Backend Developer</h1>
             <p>
                 I specialize in building scalable, secure, and high-performance backend systems 
                 using Python (Django, DRF, FastAPI, Flask) and databases like PostgreSQL, 
@@ -33,7 +39,7 @@
         </div>
 
         <div class="hero-right">
-            <img src="WhatsApp_Image_2025-11-25_at_6.07.58_PM-removebg-preview (1).png" alt="Adeel Photo">
+            <img src="WhatsApp_Image_2025-11-25_at_6.07.58_PM-removebg-preview (1).png" alt="Anwar Photo">
         </div>
     </section>
 
@@ -41,71 +47,65 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <p>
-            I'm Adeel, a backend developer with strong command over API development, 
+            I'm Anwar, a backend developer with strong command over API development, 
             authentication, database design, and backend architecture. I focus on writing 
             clean, maintainable, and scalable code following industry best practices.
         </p>
     </section>
 
     <!-- SKILLS -->
-<section id="skills" class="skills">
-    <h2>Skills</h2>
+    <section id="skills" class="skills">
+        <h2>Skills</h2>
+        <div class="skills-grid">
+            <div class="skill-card">
+                <i class="fab fa-python skill-icon"></i>
+                <div>
+                    <h3>Frameworks</h3>
+                    <p>Django • DRF • FastAPI • Flask</p>
+                </div>
+            </div>
 
-    <div class="skills-grid">
+            <div class="skill-card">
+                <i class="fas fa-database skill-icon"></i>
+                <div>
+                    <h3>Databases</h3>
+                    <p>PostgreSQL • MySQL • MongoDB</p>
+                </div>
+            </div>
 
-        <div class="skill-card">
-            <i class="fab fa-python skill-icon"></i>
-            <div>
-                <h3>Frameworks</h3>
-                <p>Django • DRF • FastAPI • Flask</p>
+            <div class="skill-card">
+                <i class="fas fa-code skill-icon"></i>
+                <div>
+                    <h3>Core</h3>
+                    <p>APIs • Auth • JWT • ORMs • System Design</p>
+                </div>
+            </div>
+
+            <div class="skill-card">
+                <i class="fab fa-git-alt skill-icon"></i>
+                <div>
+                    <h3>Tools</h3>
+                    <p>Git • Linux • Postman</p>
+                </div>
+            </div>
+
+            <div class="skill-card">
+                <i class="fab fa-aws skill-icon"></i>
+                <div>
+                    <h3>DevOps</h3>
+                    <p>AWS • Kubernetes • Docker</p>
+                </div>
             </div>
         </div>
-
-        <div class="skill-card">
-            <i class="fas fa-database skill-icon"></i>
-            <div>
-                <h3>Databases</h3>
-                <p>PostgreSQL • MySQL • MongoDB</p>
-            </div>
-        </div>
-
-        <div class="skill-card">
-            <i class="fas fa-code skill-icon"></i>
-            <div>
-                <h3>Core</h3>
-                <p>APIs • Auth • JWT • ORMs • System Design</p>
-            </div>
-        </div>
-
-        <div class="skill-card">
-            <i class="fab fa-git-alt skill-icon"></i>
-            <div>
-                <h3>Tools</h3>
-                <p>Git • Linux • Postman</p>
-            </div>
-        </div>
-
-        <div class="skill-card">
-            <i class="fab fa-aws skill-icon"></i>
-            <div>
-                <h3>DevOps</h3>
-                <p>AWS • Kubernetes • Docker</p>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 
     <!-- PROJECTS -->
     <section id="projects" class="projects">
         <h2>Projects</h2>
-
         <div class="project-list">
             <div class="project-card">
                 <h3>E-Commerce Backend</h3>
-                <p>
-                    Full-featured backend with authentication, product management, 
-                    cart system, orders, and payments.
-                </p>
+                <p>Full-featured backend with authentication, product management, cart system, orders, and payments.</p>
                 <span class="tech-stack">Django • DRF • PostgreSQL</span>
             </div>
 
@@ -130,9 +130,16 @@
         <a href="mailto:ms1640070@gmail.com" class="primary-btn">Email Me</a>
     </section>
 
+    <!-- FOOTER -->
     <footer class="footer">
-        <p>© 2025 Adeel — Backend Developer</p>
+        <p>© 2025 Anwar — Backend Developer</p>
     </footer>
 
+    <!-- JS for Hamburger -->
+    <script>
+        function toggleMenu() {
+            document.querySelector('.nav-menu').classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
