--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anwar — Backend Developer</title>
+    <title>Adeel — Backend Developer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -11,10 +11,10 @@
 
     <!-- NAVIGATION -->
     <nav class="navbar">
-        <div class="nav-logo">Anwar's Portfolio</div>
+        <div class="nav-logo">Adeel's Portfolio</div>
 
         <!-- Hamburger for mobile -->
-        <div class="hamburger" onclick="toggleMenu()">
+        <div class="hamburger">
             <i class="fas fa-bars"></i>
         </div>
 
@@ -29,7 +29,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="hero-left">
-            <h1>Hello, I’m Anwar – Backend Developer</h1>
+            <h1>Hello, I’m Adeel – Backend Developer</h1>
             <p>
                 I specialize in building scalable, secure, and high-performance backend systems 
                 using Python (Django, DRF, FastAPI, Flask) and databases like PostgreSQL, 
@@ -39,7 +39,7 @@
         </div>
 
         <div class="hero-right">
-            <img src="WhatsApp_Image_2025-11-25_at_6.07.58_PM-removebg-preview (1).png" alt="Anwar Photo">
+            <img src="WhatsApp_Image_2025-11-25_at_6.07.58_PM-removebg-preview (1).png" alt="Adeel Photo">
         </div>
     </section>
 
@@ -47,7 +47,7 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <p>
-            I'm Anwar, a backend developer with strong command over API development, 
+            I'm Adeel, a backend developer with strong command over API development, 
             authentication, database design, and backend architecture. I focus on writing 
             clean, maintainable, and scalable code following industry best practices.
         </p>
@@ -132,14 +132,33 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <p>© 2025 Anwar — Backend Developer</p>
+        <p>© 2025 Adeel — Backend Developer</p>
     </footer>
 
-    <!-- JS for Hamburger -->
+    <!-- JS for Hamburger Menu -->
     <script>
-        function toggleMenu() {
-            document.querySelector('.nav-menu').classList.toggle('active');
-        }
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-menu');
+
+        // Toggle menu on hamburger click
+        hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('active');
+        });
+
+        // Close menu when clicking a nav link
+        document.querySelectorAll('.nav-menu a').forEach(link => {
+            link.addEventListener('click', () => {
+                navMenu.classList.remove('active');
+            });
+        });
+
+        // Optional: Close menu when clicking outside navbar
+        document.addEventListener('click', (e) => {
+            if (!hamburger.contains(e.target) && !navMenu.contains(e.target)) {
+                navMenu.classList.remove('active');
+            }
+        });
     </script>
+
 </body>
 </html>
