remove extra project button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 using Python (Django, DRF, FastAPI, Flask) and databases like PostgreSQL, 
                 MySQL, and MongoDB.
             </p>
-            <a href="#projects" class="primary-btn">View Projects</a>
         </div>
 
         <div class="hero-right">
@@ -118,7 +117,7 @@
             <div class="project-card">
                 <h3>Passport Verification API</h3>
                 <p>Secure REST API with activity logs & admin dashboard.</p>
-                <span class="tech-stack">Flask • MongoDB</span>
+                <span class="tech-stack">Fastapi • Alembic • postgresql</span>
             </div>
         </div>
     </section>
