added github and linkdn links

--- a/index.html
+++ b/index.html
@@ -130,9 +130,23 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer">
-        <p>© 2025 Adeel — All Rights are Reseverd</p>
-    </footer>
+<!-- FOOTER -->
+<footer class="footer">
+    <p>© 2025 Adeel — All Rights are Reserved</p>
+
+    <div class="social-links">
+        <!-- GitHub -->
+        <a href="https://github.com/AdeelMalik22" target="_blank">
+            <i class="fab fa-github"></i>
+        </a>
+
+        <!-- LinkedIn -->
+        <a href="https://www.linkedin.com/in/adeel-malik-4b6b14326?utm_source=share_via&utm_content=profile&utm_medium=member_android" target="_blank">
+            <i class="fab fa-linkedin"></i>
+        </a>
+    </div>
+</footer>
+
 
     <!-- JS for Hamburger Menu -->
     <script>
